--- a/src/app/test/CMakeLists.txt
+++ b/src/app/test/CMakeLists.txt
@@ -1,3 +1,5 @@
+add_subdirectory(sdbus)
+
 add_executable(test_app main.c)
 target_link_libraries(test_app PRIVATE event)
 install(TARGETS test_app RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
