--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,7 @@
+cmake_minimum_required(VERSION 3.13)
+
+project(ep-bluebird)
+
 include_directories(lib/include)
 add_subdirectory(lib)
 add_subdirectory(app)
