--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "extern/protobuf"]
 	path = extern/protobuf
 	url = https://github.com/protocolbuffers/protobuf.git
+[submodule "extern/grpc"]
+	path = extern/grpc
+	url = git@github.com:grpc/grpc.git
