--- a/src/app/test/CMakeLists.txt
+++ b/src/app/test/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(sdbus)
 add_subdirectory(pbuf)
+add_subdirectory(grpc)
 
 add_executable(test_app main.c)
 target_link_libraries(test_app PRIVATE event)
