--- a/src/app/chat-app/CMakeLists.txt
+++ b/src/app/chat-app/CMakeLists.txt
@@ -15,3 +15,9 @@ add_executable(chat_client chat_client.cpp)
 target_link_libraries(chat_client PRIVATE chat_proto SDBusCpp::sdbus-c++)
 
 install(TARGETS chat_client RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
+
+add_executable(test_chat_client chat_client.cpp)
+target_link_libraries(test_chat_client PRIVATE chat_proto SDBusCpp::sdbus-c++)
+target_compile_definitions(test_chat_client PUBLIC -DUNIT_TEST)
+
+install(TARGETS test_chat_client RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}/test")
