--- a/src/app/chat-app/CMakeLists.txt
+++ b/src/app/chat-app/CMakeLists.txt
@@ -11,14 +11,15 @@ target_include_directories(chat_proto PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
 protobuf_generate(TARGET chat_proto LANGUAGE cpp)
 protobuf_generate(TARGET chat_proto LANGUAGE grpc GENERATE_EXTENSIONS .grpc.pb.h .grpc.pb.cc PLUGIN "protoc-gen-grpc=${grpc_cpp_plugin_location}")
 
-add_executable(chat_client chat_client.cpp)
-target_link_libraries(chat_client PRIVATE chat_proto SDBusCpp::sdbus-c++)
+#add_executable(chat_client chat_client.cpp)
+#target_link_libraries(chat_client PRIVATE chat_proto SDBusCpp::sdbus-c++)
 
-add_executable(chat_service chat_service.cpp)
-target_link_libraries(chat_service PRIVATE chat_proto)
+#add_executable(chat_service chat_service.cpp)
+#target_link_libraries(chat_service PRIVATE chat_proto)
 
-install(TARGETS chat_client chat_service RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
+#install(TARGETS chat_client chat_service RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
 
+## Test programs ##
 add_executable(test_chat_client chat_client.cpp)
 target_link_libraries(test_chat_client PRIVATE chat_proto SDBusCpp::sdbus-c++)
 target_compile_definitions(test_chat_client PUBLIC -DUNIT_TEST)
